@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-06-18 (SVN):
+    * gl_vidnt.c: Fixed dynamic loading of glGetTexParameterfv().
+
+2012-06-18 (SVN):
     * snd_vorbis.c: Set initialization success for MorphOS.
 
 2012-06-18 (SVN):
